# Agent-Hackaton

./: README.md  data_extraction.py  newagent.ipynb  pyproject.toml  report.md  test-agent.py  test.ipynb  test2.ipynb  test2.py  test_agent2.py  test_agent3.py
Experiments/: test.ipynb
data/: best_stories.json  new_stories.json  test.json
data/cache_data/: category.json  locations.json
src/agentic/: crew.py  main.py
src/agentic/config/: agents.yaml
test_data/: test1.json  tests.json  tt.txt
tools/: test_tool.py
utils/: config.py  utilities.py
